# LBridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: test-linux-clang.yml  test-linux-gcc.yml  test-macos.yml  test-windows-clang.yml  test-windows-mingw.yml  test-windows-msvc.yml  tests.yml
src/lbridge/: lbridge.c  lbridge.h  lbridge_custom_backend.h
src/lbridge/internals/: lbridge_internal.c  lbridge_internal.h  lbridge_socket.h
src/lbridge/internals/socket_backends/: lbridge_backend_bluetooth.c  lbridge_backend_socket_win_unix.c  lbridge_socket_bluetooth.h  lbridge_socket_win_unix.h  lbridge_win_wsa_init.c
src/lbridge/mbedtls-chachapoly/mbedtls/: mbedtls_config.h
src/unit_tests/: unit_tests.cpp
